--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 isolated_build = True
 envlist =
-    {py38,py39,py310,py311,py312}-django{40,41,42},
+    {py39,py310,py311,py312}-django{40,41,42},
     {py310,py311,py312}-django{50a},
 [testenv]
 passenv =
@@ -14,8 +14,6 @@ deps =
     cherrypy
     celery!=4.4.4  # https://github.com/celery/celery/issues/6153
     cryptography
-    django32: Django>=3.2,<3.3
-    django32: djangorestframework
     django40: Django>=4.0,<4.1
     django40: djangorestframework
     django41: Django>4.0,<4.2
@@ -26,16 +24,16 @@ deps =
     django50a: djangorestframework
     dramatiq>=1.0.0
     elasticsearch<8.0.0; python_version <= "3.9"
-    elasticsearch ; python_version > "3.9"
+    elasticsearch<9; python_version > "3.9"
     falcon
     flask
     flask-sqlalchemy
     hiredis
     huey
     hug>=2.5.1
-    httpretty
     importlib_metadata
     jinja2
+    mocket
     psutil
     pymongo
     pyramid
@@ -46,7 +44,6 @@ deps =
     redis
     rq
     six
-    sqlalchemy < 2.0.0 ; python_version <= "3.8"
     sqlalchemy
     starlette
     webtest
@@ -54,6 +51,6 @@ commands =
     pytest {posargs}
 
 # For newer versions of python use --asyncio-mode=auto usage.
-[testenv:py{38,39,310,311}-django{40,41,42}]
+[testenv:py{38,39,310,311,312,313}-django{40,41,42,50a}]
 commands =
     pytest {posargs} --asyncio-mode=auto
