--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,15 +14,15 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ ubuntu-20.04 ]
+        os: [ ubuntu-22.04 ]
         python: ['3.10']
         manylinux_image: [ manylinux2014, manylinux_2_28 ]
         # Disable for platforms where pure Python wheels would be generated
-        cibw_skip: [ "pp38-* pp39-* pp310-* pp311-*" ]
+        cibw_skip: [ "pp38-* pp39-* pp310-* pp311-* pp312-* pp313-*" ]
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
-      - uses: actions/setup-python@v4
+      - uses: actions/setup-python@v5
         name: Install Python
         with:
           python-version: ${{ matrix.python }}
@@ -47,17 +47,18 @@ jobs:
           CIBW_ARCHS_LINUX: "auto aarch64"
         run: python -m cibuildwheel
 
-      - uses: actions/upload-artifact@v3
+      - uses: actions/upload-artifact@v4
         with:
+          name: ${{ matrix.manylinux_image }}-${{ matrix.python }}-${{ matrix.os }}
           path: ./wheelhouse/*.whl
 
   build_macos_wheels:
     name: Build macos wheels (cross-compiles arm64)
     runs-on: macos-13
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
-      - uses: actions/setup-python@v4
+      - uses: actions/setup-python@v5
         name: Install Python
         with:
           python-version: "3.10"
@@ -72,23 +73,24 @@ jobs:
           CIBW_ARCHS_MACOS: "x86_64 arm64"
         run: python -m cibuildwheel
 
-      - uses: actions/upload-artifact@v3
+      - uses: actions/upload-artifact@v4
         with:
+          name: macos
           path: ./wheelhouse/*.whl
 
   build_pure_wheels:
     name: Build pure python wheels
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-24.04
     strategy:
       matrix:
-        python: [3.9]
+        python: [3.8, 3.9]
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
-      - uses: actions/setup-python@v4
+      - uses: actions/setup-python@v5
         name: Install Python
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: ${{ matrix.python }}
       - name: Install packaging tools
         run: |
           python -m pip install --upgrade pip setuptools importlib_metadata wheel
@@ -98,17 +100,18 @@ jobs:
           SCOUT_DISABLE_EXTENSIONS: "1"
         run: python setup.py bdist_wheel
 
-      - uses: actions/upload-artifact@v3
+      - uses: actions/upload-artifact@v4
         with:
+          name: pp${{ matrix.python }}
           path: dist/*.whl
 
   build_sdist:
     name: Build source distribution
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
-      - uses: actions/setup-python@v3
+      - uses: actions/setup-python@v5
         name: Install Python
         with:
           python-version: 3.9
@@ -116,26 +119,29 @@ jobs:
       - name: Build sdist
         run: python setup.py sdist
 
-      - uses: actions/upload-artifact@v3
+      - uses: actions/upload-artifact@v4
         with:
+          name: sdist
           path: dist/*.tar.gz
 
   upload_pypi:
     needs: [cibuildwheel_py38plus, build_pure_wheels, build_sdist, build_macos_wheels]
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-24.04
+    permissions:
+      id-token: write
     steps:
       - name: Download distributions for publishing.
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
-          name: artifact
           path: dist
+          merge-multiple: true
 
       - name: Publish distributions to Test PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
           user: __token__
           password: ${{ secrets.TEST_TWINE_PASSWORD }}
-          repository_url: https://test.pypi.org/legacy/
+          repository-url: https://test.pypi.org/legacy/
           skip_existing: true
 
       - name: Publish distributions to PyPI
@@ -143,4 +149,3 @@ jobs:
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
           user: __token__
-          password: ${{ secrets.TWINE_PASSWORD }}
