add fastmcp requirement to tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -26,6 +26,7 @@ deps =
     elasticsearch<8.0.0; python_version <= "3.9"
     elasticsearch<9; python_version > "3.9"
     falcon
+    fastmcp>=2.9.0
     flask
     flask-sqlalchemy
     hiredis
