--- a/tox.ini
+++ b/tox.ini
@@ -26,7 +26,7 @@ deps =
     elasticsearch<8.0.0; python_version <= "3.9"
     elasticsearch<9; python_version > "3.9"
     falcon
-    fastmcp>=2.9.0
+    fastmcp>=2.9.0; python_version >= "3.10"
     flask
     flask-sqlalchemy
     hiredis
