add python 3.13 and 3.14 support, and django 5.1 and 5.2, drop 3.9

--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,8 @@
 [tox]
 isolated_build = True
 envlist =
-    {py39,py310,py311,py312}-django{40,41,42},
-    {py310,py311,py312}-django{50a},
+    {py310,py311,py312,py313,py314}-django{40,41,42},
+    {py310,py311,py312,py313,py314}-django{50a,51,52},
 [testenv]
 passenv =
     ELASTICSEARCH_URL
@@ -22,6 +22,10 @@ deps =
     django42: djangorestframework
     django50a: Django>=5.0a1,<5.1
     django50a: djangorestframework
+    django51: Django>=5.1,<5.2
+    django51: djangorestframework
+    django52: Django>=5.2,<5.3
+    django52: djangorestframework
     dramatiq>=1.0.0
     elasticsearch<8.0.0; python_version <= "3.9"
     elasticsearch<9; python_version > "3.9"
@@ -52,6 +56,6 @@ commands =
     pytest {posargs}
 
 # For newer versions of python use --asyncio-mode=auto usage.
-[testenv:py{38,39,310,311,312,313}-django{40,41,42,50a}]
+[testenv:py{38,310,311,312,313,314}-django{40,41,42,50a,51,52}]
 commands =
     pytest {posargs} --asyncio-mode=auto
