--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       matrix:
         os: [ ubuntu-22.04 ]
-        python: ['3.10']
+        python: ["3.10"]
         manylinux_image: [ manylinux2014, manylinux_2_28 ]
         # Disable for platforms where pure Python wheels would be generated
         cibw_skip: [ "pp38-* pp39-* pp310-* pp311-* pp312-* pp313-*" ]
@@ -83,7 +83,7 @@ jobs:
     runs-on: ubuntu-24.04
     strategy:
       matrix:
-        python: [3.9]
+        python: ["3.10"]
     steps:
       - uses: actions/checkout@v4
 
@@ -114,7 +114,7 @@ jobs:
       - uses: actions/setup-python@v5
         name: Install Python
         with:
-          python-version: 3.9
+          python-version: "3.10"
 
       - name: Build sdist
         run: python setup.py sdist
