add warning filters for python 3.13 and 3.14

--- a/pytest.ini
+++ b/pytest.ini
@@ -62,3 +62,7 @@ filterwarnings =
     ignore:.*broker_connection_retry configuration setting will no longer determine.*:PendingDeprecationWarning
     ; Triggered by CoreAgentManager with python 3.12
     ignore:Python 3.14 will, by default, filter extracted tar archives and reject files or modify their metadata.*:DeprecationWarning
+    ; Triggered by Django/SQLite with Python 3.13+ - stricter resource management
+    ignore:unclosed database.*:ResourceWarning
+    ; Triggered by asyncio with Python 3.14+
+    ignore:'asyncio.iscoroutinefunction' is deprecated and slated for removal in Python 3.16; use inspect.iscoroutinefunction\(\) instead:DeprecationWarning
