--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,9 @@
 [tox]
 isolated_build = True
 envlist =
-    {py310,py311,py312,py313,py314}-django{40,41,42},
-    {py310,py311,py312,py313,py314}-django{50a,51,52},
+    {py310,py311,py312,py313}-django{40,41,42},
+    {py310,py311,py312,py313}-django{50a,51,52},
+    py314-django52,
 [testenv]
 passenv =
     ELASTICSEARCH_URL
