--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,10 +15,10 @@ jobs:
     strategy:
       matrix:
         os: [ ubuntu-22.04 ]
-        python: ["3.10"]
+        python: ["3.14"]
         manylinux_image: [ manylinux2014, manylinux_2_28 ]
         # Disable for platforms where pure Python wheels would be generated
-        cibw_skip: [ "pp38-* pp39-* pp310-* pp311-* pp312-* pp313-*" ]
+        cibw_skip: [ "pp38-* pp39-* pp310-* pp311-* pp312-* pp313-* pp314-*" ]
     steps:
       - uses: actions/checkout@v4
 
@@ -61,14 +61,14 @@ jobs:
       - uses: actions/setup-python@v5
         name: Install Python
         with:
-          python-version: "3.10"
+          python-version: "3.14"
 
       - name: Install cibuildwheel
         run: |
           python -m pip install --upgrade pip cibuildwheel
       - name: Build binary wheels
         env:
-          CIBW_SKIP: "pp38-* pp39-* pp310-* pp311-*"
+          CIBW_SKIP: "pp38-* pp39-* pp310-* pp311-* pp312-* pp313-* pp314-*"
           CIBW_BUILD_VERBOSITY: 1
           CIBW_ARCHS_MACOS: "x86_64 arm64"
         run: python -m cibuildwheel
@@ -83,7 +83,7 @@ jobs:
     runs-on: ubuntu-24.04
     strategy:
       matrix:
-        python: ["3.10"]
+        python: ["3.14"]
     steps:
       - uses: actions/checkout@v4
 
@@ -114,7 +114,7 @@ jobs:
       - uses: actions/setup-python@v5
         name: Install Python
         with:
-          python-version: "3.10"
+          python-version: "3.14"
 
       - name: Build sdist
         run: python setup.py sdist
