--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,6 +27,10 @@ jobs:
         with:
           python-version: ${{ matrix.python }}
 
+      - name: Install packaging tools
+        run: |
+          python -m pip install --upgrade pip setuptools importlib_metadata wheel
+
       - name: Install cibuildwheel
         run: |
           python -m pip install --upgrade pip cibuildwheel
@@ -115,6 +119,10 @@ jobs:
         name: Install Python
         with:
           python-version: "3.14"
+
+      - name: Install packaging tools
+        run: |
+          python -m pip install --upgrade pip setuptools importlib_metadata wheel
 
       - name: Build sdist
         run: python setup.py sdist
