--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,10 +27,6 @@ jobs:
         with:
           python-version: ${{ matrix.python }}
 
-      - name: Install packaging tools
-        run: |
-          python -m pip install --upgrade pip setuptools importlib_metadata wheel
-
       - name: Install cibuildwheel
         run: |
           python -m pip install --upgrade pip cibuildwheel
@@ -95,14 +91,14 @@ jobs:
         name: Install Python
         with:
           python-version: ${{ matrix.python }}
-      - name: Install packaging tools
+      - name: Install build
         run: |
-          python -m pip install --upgrade pip setuptools importlib_metadata wheel
+          python -m pip install --upgrade pip build
 
       - name: Build Python pure Python wheel
         env:
           SCOUT_DISABLE_EXTENSIONS: "1"
-        run: python setup.py bdist_wheel
+        run: python -m build --wheel
 
       - uses: actions/upload-artifact@v4
         with:
@@ -120,12 +116,12 @@ jobs:
         with:
           python-version: "3.14"
 
-      - name: Install packaging tools
+      - name: Install build
         run: |
-          python -m pip install --upgrade pip setuptools importlib_metadata wheel
+          python -m pip install --upgrade pip build
 
       - name: Build sdist
-        run: python setup.py sdist
+        run: python -m build --sdist
 
       - uses: actions/upload-artifact@v4
         with:
