--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -97,12 +97,12 @@ jobs:
           python-version: ${{ matrix.python }}
       - name: Install packaging tools
         run: |
-          python -m pip install --upgrade pip setuptools importlib_metadata wheel
+          python -m pip install --upgrade pip build
 
       - name: Build Python pure Python wheel
         env:
           SCOUT_DISABLE_EXTENSIONS: "1"
-        run: python setup.py bdist_wheel
+        run: python -m build --wheel
 
       - uses: actions/upload-artifact@v4
         with:
@@ -122,10 +122,10 @@ jobs:
 
       - name: Install packaging tools
         run: |
-          python -m pip install --upgrade pip setuptools importlib_metadata wheel
+          python -m pip install --upgrade pip build
 
       - name: Build sdist
-        run: python setup.py sdist
+        run: python -m build --sdist
 
       - uses: actions/upload-artifact@v4
         with:
